# internal/api/models.gen.go
@@ -3,6 +3,12 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package api
 
+// Defines values for WaitForChatResponseStatus.
+const (
+	Assigned WaitForChatResponseStatus = "assigned"
+	Waiting  WaitForChatResponseStatus = "waiting"
+)
+
 // GetFirstChallengeResponse Response containing the first challenge details
 type GetFirstChallengeResponse struct {
 	// Challenge The challenge string that needs to be solved
@@ -68,6 +74,18 @@ type SolveFirstChallengeResponse struct {
 	Difficulty int32  `json:"difficulty"`
 	UserId     string `json:"userId"`
 }
+
+// WaitForChatResponse Response indicating chat assignment
+type WaitForChatResponse struct {
+	// PeerPublicKey Public key of the assigned chat peer
+	PeerPublicKey *string `json:"peerPublicKey"`
+
+	// Status Status of the chat assignment
+	Status WaitForChatResponseStatus `json:"status"`
+}
+
+// WaitForChatResponseStatus Status of the chat assignment
+type WaitForChatResponseStatus string
 
 // SolveFirstChallengeJSONRequestBody defines body for SolveFirstChallenge for application/json ContentType.
 type SolveFirstChallengeJSONRequestBody = SolveFirstChallengeRequest
